# Nova-Scotia

./: .gitignore  Cargo.toml  LICENSE  README.md  circom_input.json  circom_witness.wtns
.github/workflows/: test.yml
browser-test/: Cargo.toml  env.sh  reader.js  rust-toolchain
browser-test/.cargo/: config
browser-test/src/: lib.rs  wasm.rs
browser-test/test-client/: next.config.js  package.json  tsconfig.json
browser-test/test-client/config/: webpack.config.js  webpackDevServer.config.js
browser-test/test-client/public/: _headers
browser-test/test-client/src/: App.tsx  nova-scotia-worker.ts
circom/: input.json  package-lock.json  package.json  test.circom  test.r1cs  test.sym  witness.wtns  witness_wrong.wtns
circom/test_cpp/: Makefile  fr.cpp  test  test.cpp
examples/: bitcoin.rs  toy.rs  toy_bn254.rs  toy_browser.rs  toy_pasta.rs  toy_wasm.rs
examples/bitcoin/: README.md  benchmark.csv
examples/bitcoin/circom/: bitcoin.circom  bitcoin_benchmark.circom  compile.sh
examples/bitcoin/circom/bitcoin_cpp/: Makefile  bitcoin  bitcoin.cpp
examples/bitcoin/fetcher/: btc-blocks.json  index.ts  package-lock.json  package.json  rpc-client.ts
examples/test-client/: package.json
examples/test-client/src/: App.tsx  halo-worker.ts
examples/toy/: compile.sh  toy.r1cs
examples/toy/bn254/: toy.r1cs
examples/toy/bn254/toy_cpp/: toy  toy.cpp
examples/toy/bn254/toy_js/: toy.wasm
examples/toy/pasta/: toy.sym
examples/toy/pasta/toy_cpp/: toy
examples/toy/pasta/toy_js/: toy.wasm
examples/toy/toy_cpp/: Makefile  fr.hpp  toy  toy.cpp
examples/toy/toy_js/: toy.wasm
src/: circom.rs  lib.rs  main.rs
src/circom/: circuit.rs  file.rs  main.rs  reader.rs  wasm.rs
src/circom/wasm_deps/: generate_witness.js  generate_witness_browser.js  witness_calculator.js
test_example/: test.circom  test.r1cs
